--- a/index.html
+++ b/index.html
@@ -402,31 +402,30 @@
                                     </tr>
                                     <tr>
                                         <td width="50%">Nama Petugas Penguji</td>
-                                        <td colspan="2" width="50%">: RD. BAMBANG SUCIPTO PUJI 
-HARTONO. SH
+                                        <td colspan="2" width="50%">: JONI KRISTIONO
  </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">NRP (Nomor Registrasi Penguji)</td>
-                                        <td colspan="2" width="50%">: 036.004.PT3.01.002 </td>
+                                        <td colspan="2" width="50%">:  036.072.PT5.01.005 </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">Nama Kepala Dinas</td>
-                                        <td colspan="2" width="50%">: BENNY YUARSA, ATD. M.Si </td>
+                                        <td colspan="2" width="50%">: PLT. Drs. JOKO PURWANTO. MM. </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">Pangkat Kepala Dinas</td>
-                                        <td colspan="2" width="50%">: Pembina Utama  I IV/b </td>
+                                        <td colspan="2" width="50%">: Pembina Tingkat I - IV/b </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">NIP Kepala Dinas</td>
-                                        <td colspan="2" width="50%">: 19670909 1991031 1 005
+                                        <td colspan="2" width="50%">: 19740405 199303 1 003
 
  </td>
                                     </tr>
                                     <tr>
                                         <td width="50%">Unit Pelaksana Teknis Daerah Pengujian </td>
-                                        <td colspan="2" width="50%">: DISHUB KABUPATEN SERANG </td>
+                                        <td colspan="2" width="50%">: DISHUB KOTA CILEGON </td>
                                     </tr>
                                     <tr>
                                     <td colspan="2"><strong>Asal Kendaraan Wajib Uji</strong></td>
@@ -434,7 +433,7 @@ HARTONO. SH
                                     </tr>
                                     <tr>
                                                 <td width="50%">Wilayah   </td>
-                                                <td colspan="2" width="50%">: DISHUB KABUPATEN SERANG </td>
+                                                <td colspan="2" width="50%">: DISHUB KOTA CILEGON </td>
                                             </tr>
                                             <tr>
                                                 <td width="50%">Wilayah Asal</td>
